[package]
name = "taskmaster"
version = "0.1.0"
authors = ["gmorer <gmorer@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde_derive = "1.0.110"
serde = "1.0.110"
libc = "0.2.69"
polling = "2.0.1"
parking_lot = "0.11.0"